<resources>
    <string name="app_name">Login App</string>

    <string name="text_question">Sanisha loves Chandan</string>
    <string name="text_true">True</string>
    <string name="text_false">False</string>
    <string name="text_true_answer">No Chandan loves Sanisha</string>
    <string name="text_false_answer">Yes Sanisha does love Chandan</string>
    <string name="text_principle">Principle</string>
    <string name="text_time">Time</string>
    <string name="text_rate">Rate</string>
    <string name="text_results">Results</string>
    <string name="text_name">Enter your Name</string>

    <string name="btn_calculate">Calculate</string>
    <string name="btn_send">Send</string>

    <string name="title_login">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="btn_login">Login</string>
    <string name="et_password">Password</string>
    <string name="et_e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="btn_register">Register</string>
    <string name="tv_register">Register</string>
    <string name="et_repassword">Re-type Password</string>
    <string name="et_name">Full Name</string>

</resources>